fix footer titles & social icon alignment

--- a/src/components/footers/page.scss
+++ b/src/components/footers/page.scss
@@ -29,7 +29,7 @@ $col-padding: 15px;
     white-space: nowrap;
     text-align: right;
 
-    a {
+    a:not(:last-of-type) {
       padding-right: 0.25rem;
     }
 
