--- a/src/components/layouts/tool/tool.scss
+++ b/src/components/layouts/tool/tool.scss
@@ -1,58 +1,58 @@
 @import '../../../styles/index.scss';
 
-.page {
+.tool-page {
   max-width: 1140px;
   margin: 75px 8.33% 0;
   color: #666666;
-}
 
-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-.title {
-  text-transform: uppercase;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: 2.8px;
-  line-height: 20px;
-}
-
-p {
-  margin-top: 25px;
-  margin-bottom: 0;
-}
-
-.intro {
-  font-size: 42px;
-  font-weight: 300;
-  line-height: 50px;
-}
-
-.follow-up {
-  margin-top: 100px;
-}
-
-@media (min-width: $desktop) {
-  main {
-    margin-top: 45px;
-    margin-bottom: 75px;
-  }
-}
-@media (min-width: $tablet) and (max-width: $desktop - 1) {
-  main {
-    margin-top: 30px;
-    margin-bottom: 75px;
-  }
-}
-@media (max-width: $tablet - 1) {
-  .page {
-    margin-top: 20px;
+  header {
+    display: flex;
+    justify-content: space-between;
   }
 
-  main {
+  .title {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 2.8px;
+    line-height: 20px;
+  }
+
+  p {
     margin-top: 25px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
+  }
+
+  .intro {
+    font-size: 42px;
+    font-weight: 300;
+    line-height: 50px;
+  }
+
+  .follow-up {
+    margin-top: 100px;
+  }
+
+  @media (min-width: $desktop) {
+    main {
+      margin-top: 45px;
+      margin-bottom: 75px;
+    }
+  }
+  @media (min-width: $tablet) and (max-width: $desktop - 1) {
+    main {
+      margin-top: 30px;
+      margin-bottom: 75px;
+    }
+  }
+  @media (max-width: $tablet - 1) {
+    .page {
+      margin-top: 20px;
+    }
+
+    main {
+      margin-top: 25px;
+      margin-bottom: 30px;
+    }
   }
 }
